--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+
+
+        <!-- test replacement for in-memory DB -->
+        <!--<dependency>-->
+            <!--<groupId>com.h2database</groupId>-->
+            <!--<artifactId>h2</artifactId>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
+
+
     </dependencies>
 
     <build>
